--- a/static/compatibilities/kube-prometheus-stack.yaml
+++ b/static/compatibilities/kube-prometheus-stack.yaml
@@ -5,6 +5,26 @@ readme_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/m
 helm_repository_url: https://prometheus-community.github.io/helm-charts
 chart_changelog_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/refs/heads/main/charts/kube-prometheus-stack/UPGRADE.md
 versions:
+- version: 80.9.1
+  kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
+    '1.25']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: ''
+    chart_updates: ['80.8.0: Grafana Operator YAML dashboards now include `folderRef`
+        and `folderUID` fields (adds explicit folder targeting for operator-managed
+        dashboards).', '80.9.1: Bumps kube-prometheus-stack chart dependencies with
+        non-major updates (Renovate PR); no explicit template/value changes called
+        out in the release note.']
+    features: ['Grafana Operator dashboards can now specify a folder via `folderRef`/`folderUID`,
+        improving dashboard organization when using the Grafana Operator.']
+    breaking_changes: []
+  chart_version: 80.9.1
+  images: ['docker.io/bats/bats:v1.4.1', 'docker.io/grafana/grafana:12.3.1', 'ghcr.io/jkroepke/kube-webhook-certgen:1.7.4',
+    'quay.io/kiwigrid/k8s-sidecar:2.1.2', 'quay.io/prometheus-operator/prometheus-operator:v0.87.1',
+    'quay.io/prometheus/alertmanager:v0.30.0', 'quay.io/prometheus/node-exporter:v1.10.2',
+    'quay.io/prometheus/prometheus:v3.8.1', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.17.0']
 - version: 80.8.0
   kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
     '1.25']
@@ -649,7 +669,14 @@ versions:
     '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: ''
+    chart_updates: [55.11.0 updates the bundled Grafana subchart to the 7.2.x series.,
+      56.21.4 fixes the CoreDNS Grafana dashboard by removing circular label filtering
+        in variables and refreshing variable values when the time range changes.]
+    features: ['Grafana subchart upgraded to 7.2.x, which may include new dashboard/UX/plugin
+        capabilities depending on your Grafana configuration.']
+    breaking_changes: []
   chart_version: 56.21.4
   images: ['docker.io/bats/bats:v1.4.1', 'docker.io/grafana/grafana:10.3.3', 'quay.io/kiwigrid/k8s-sidecar:1.25.2',
     'quay.io/prometheus-operator/prometheus-operator:v0.71.2', 'quay.io/prometheus/alertmanager:v0.27.0',
