--- a/static/compatibilities/vector.yaml
+++ b/static/compatibilities/vector.yaml
@@ -4,7 +4,7 @@ release_url: https://github.com/vectordotdev/vector/releases/tag/v{vsn}
 helm_repository_url: https://helm.vector.dev/
 versions:
 - version: 0.52.0
-  kube: ['1.34', '1.33', '1.32']
+  kube: []
   requirements: []
   incompatibilities: []
   summary:
@@ -22,7 +22,7 @@ versions:
   chart_version: 0.49.0
   images: ['timberio/vector:0.52.0-distroless-libc']
 - version: 0.51.0
-  kube: ['1.34', '1.33', '1.32']
+  kube: []
   requirements: []
   incompatibilities: []
   summary:
@@ -44,7 +44,7 @@ versions:
   chart_version: 0.47.0
   images: ['timberio/vector:0.51.0-distroless-libc']
 - version: 0.50.0
-  kube: ['1.34', '1.33', '1.32']
+  kube: []
   requirements: []
   incompatibilities: []
   summary:
@@ -65,7 +65,7 @@ versions:
   chart_version: 0.46.0
   images: ['timberio/vector:0.50.0-distroless-libc']
 - version: 0.49.0
-  kube: ['1.33', '1.32', '1.31']
+  kube: []
   requirements: []
   incompatibilities: []
   summary:
@@ -85,42 +85,42 @@ versions:
   chart_version: 0.45.0
   images: ['timberio/vector:0.49.0-distroless-libc']
 - version: 0.48.0
-  kube: ['1.33', '1.32', '1.31']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.44.0
   images: ['timberio/vector:0.48.0-distroless-libc']
 - version: 0.47.0
-  kube: ['1.33', '1.32', '1.31']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.43.0
   images: ['timberio/vector:0.47.0-distroless-libc']
 - version: 0.46.0
-  kube: ['1.32', '1.31', '1.30']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.42.0
   images: ['timberio/vector:0.46.0-distroless-libc']
 - version: 0.45.0
-  kube: ['1.32', '1.31', '1.30']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.41.0
   images: ['timberio/vector:0.45.0-distroless-libc']
 - version: 0.44.0
-  kube: ['1.32', '1.31', '1.30']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.40.0
   images: ['timberio/vector:0.44.0-distroless-libc']
 - version: 0.43.0
-  kube: ['1.31', '1.30', '1.29']
+  kube: []
   requirements: []
   incompatibilities: []
   summary:
@@ -136,210 +136,189 @@ versions:
   chart_version: 0.38.0
   images: ['timberio/vector:0.43.0-distroless-libc']
 - version: 0.42.0
-  kube: ['1.31', '1.30', '1.29']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.37.0
   images: ['timberio/vector:0.42.0-distroless-libc']
 - version: 0.41.0
-  kube: ['1.31', '1.30', '1.29']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.36.0
   images: ['timberio/vector:0.41.0-distroless-libc']
-- version: 0.40.1
-  kube: ['1.31', '1.30', '1.29']
-  requirements: []
-  incompatibilities: []
-  summary: null
-  chart_version: 0.35.2
-  images: ['timberio/vector:0.40.1-distroless-libc']
 - version: 0.40.0
-  kube: ['1.30', '1.29', '1.28']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.35.0
   images: ['timberio/vector:0.40.0-distroless-libc']
 - version: 0.39.0
-  kube: ['1.30', '1.29', '1.28']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.34.0
   images: ['timberio/vector:0.39.0-distroless-libc']
 - version: 0.38.0
-  kube: ['1.30', '1.29', '1.28']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.33.0
   images: ['timberio/vector:0.38.0-distroless-libc']
 - version: 0.37.0
-  kube: ['1.29', '1.28', '1.27']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.32.0
   images: ['timberio/vector:0.37.0-distroless-libc']
 - version: 0.36.0
-  kube: ['1.29', '1.28', '1.27']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.31.0
   images: ['timberio/vector:0.36.0-distroless-libc']
 - version: 0.35.0
-  kube: ['1.29', '1.28', '1.27']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.30.0
   images: ['timberio/vector:0.35.0-distroless-libc']
-- version: 0.34.2
-  kube: ['1.29', '1.28', '1.27']
-  requirements: []
-  incompatibilities: []
-  summary: null
-  chart_version: 0.29.1
-  images: ['timberio/vector:0.34.2-distroless-libc']
 - version: 0.34.0
-  kube: ['1.28', '1.27', '1.26']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.28.0
   images: ['timberio/vector:0.34.0-distroless-libc']
 - version: 0.33.0
-  kube: ['1.28', '1.27', '1.26']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.26.0
   images: ['timberio/vector:0.33.0-distroless-libc']
 - version: 0.32.0
-  kube: ['1.28', '1.27', '1.26']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.24.0
   images: ['timberio/vector:0.32.0-distroless-libc']
 - version: 0.31.0
-  kube: ['1.27', '1.26', '1.25']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.23.0
   images: ['timberio/vector:0.31.0-distroless-libc']
 - version: 0.30.0
-  kube: ['1.27', '1.26', '1.25']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.22.1
   images: ['timberio/vector:0.30.0-distroless-libc']
 - version: 0.29.0
-  kube: ['1.27', '1.26', '1.25']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.21.0
   images: ['timberio/vector:0.29.0-distroless-libc']
 - version: 0.28.0
-  kube: ['1.26', '1.25', '1.24']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.20.0
   images: ['timberio/vector:0.28.0-distroless-libc']
-- version: 0.27.1
-  kube: ['1.26', '1.25', '1.24']
-  requirements: []
-  incompatibilities: []
-  summary: null
-  chart_version: 0.19.2
-  images: ['timberio/vector:0.27.1-distroless-libc']
 - version: 0.27.0
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.19.0
   images: ['timberio/vector:0.27.0-distroless-libc']
 - version: 0.26.0
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.18.0
   images: ['timberio/vector:0.26.0-distroless-libc']
 - version: 0.25.1
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.17.0
   images: ['timberio/vector:0.25.1-distroless-libc']
 - version: 0.24.0
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.16.0
   images: ['timberio/vector:0.24.0-distroless-libc']
 - version: 0.23.0
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.15.0
   images: ['timberio/vector:0.23.0-distroless-libc']
 - version: 0.22.0
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.13.0
   images: ['timberio/vector:0.22.0-distroless-libc']
 - version: 0.21.0
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.10.0
   images: ['timberio/vector:0.21.0-distroless-libc']
 - version: 0.20.0
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.7.0
   images: ['timberio/vector:0.20.0-distroless-libc']
 - version: 0.19.0
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.4.0
   images: ['timberio/vector:0.19.0-distroless-libc']
 - version: 0.18.0
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.2.1
   images: ['timberio/vector:0.18.0-distroless-libc']
 - version: 0.17.3
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
   chart_version: 0.1.1
   images: ['timberio/vector:0.17.3-distroless-libc']
 - version: 0.16.1
-  kube: ['1.25', '1.24', '1.23']
+  kube: []
   requirements: []
   incompatibilities: []
   summary: null
