--- a/go/controller/config/samples/service_deployment.yaml
+++ b/go/controller/config/samples/service_deployment.yaml
@@ -1,29 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: test-secret
+  name: configuration
   namespace: default
 data:
   secret: dGVzdA==
----
-apiVersion: deployments.plural.sh/v1alpha1
-kind: InfrastructureStack
-metadata:
-  name: test-stack
-  namespace: default
-spec:
-  name: "test"
-  type: TERRAFORM
-  configuration:
-    version: "sha-ae2663f-terraform-1.8.2"
-    image: "ghcr.io/pluralsh/harness"
-  repositoryRef: {}
-  clusterRef: {}
-  cluster: mgmt
-  git:
-    ref: main
-    folder: terraform
-    url: https://github.com/zreigz/tf-hello.git
 ---
 apiVersion: deployments.plural.sh/v1alpha1
 kind: ServiceDeployment
@@ -38,8 +19,23 @@ spec:
     url: https://github.com/zreigz/k8s-helm.git
   clusterRef: {}
   cluster: mgmt
-  imports:
-    - stackRef:
-        kind: InfrastructureStack
-        name: test-stack
-        namespace: default
+  configurationRef:
+    name: configuration
+    namespace: default
+---
+apiVersion: deployments.plural.sh/v1alpha1
+kind: ServiceDeployment
+metadata:
+  name: test-duplicate
+  namespace: default
+spec:
+  version: 0.0.1
+  git:
+    folder: nginx
+    ref: master
+    url: https://github.com/zreigz/k8s-helm.git
+  clusterRef: {}
+  cluster: mgmt
+  configurationRef:
+    name: configuration
+    namespace: default
