--- a/assets/package.json
+++ b/assets/package.json
@@ -58,6 +58,7 @@
     "@saas-ui/use-hotkeys": "1.1.3",
     "@sentry/react": "10.10.0",
     "@sentry/vite-plugin": "4.3.0",
+    "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-table": "8.20.5",
     "@xyflow/react": "12.6.0",
     "anser": "2.1.1",
