--- a/assets/package.json
+++ b/assets/package.json
@@ -58,7 +58,7 @@
     "@saas-ui/use-hotkeys": "1.1.3",
     "@sentry/react": "10.10.0",
     "@sentry/vite-plugin": "4.3.0",
-    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query": "5.90.16",
     "@tanstack/react-table": "8.20.5",
     "@xyflow/react": "12.6.0",
     "anser": "2.1.1",
@@ -68,6 +68,7 @@
     "apollo-link-error": "1.1.13",
     "apollo-link-rest": "0.9.0",
     "apollo-link-retry": "2.2.16",
+    "axios": "1.13.2",
     "chroma-js": "2.4.2",
     "classnames": "2.3.2",
     "cmdk": "1.0.0",
@@ -99,7 +100,7 @@
     "react-error-boundary": "4.0.11",
     "react-focus-lock": "2.13.5",
     "react-merge-refs": "2.1.1",
-    "react-query-swagger": "^15.13.1",
+    "react-query-swagger": "15.13.1",
     "react-resize-detector": "9.1.0",
     "react-router-dom": "6.28.1",
     "react-virtualized-auto-sizer": "1.0.26",
