--- a/static/compatibilities/gpu-operator.yaml
+++ b/static/compatibilities/gpu-operator.yaml
@@ -8,6 +8,7 @@ versions:
   kube: ['1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 25.10.1
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.9.1', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v25.10.1',
@@ -16,6 +17,7 @@ versions:
   kube: ['1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 25.10.0
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.9.0', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v25.10.0',
@@ -24,6 +26,7 @@ versions:
   kube: ['1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 25.3.2
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.8.0', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v25.3.2',
@@ -32,6 +35,7 @@ versions:
   kube: ['1.33', '1.32', '1.31']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 25.3.0
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.8.0', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v25.3.0',
@@ -40,6 +44,7 @@ versions:
   kube: ['1.32', '1.31', '1.30']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 24.9.1
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.7.0', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v24.9.1',
@@ -48,6 +53,7 @@ versions:
   kube: ['1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 24.9.0
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.7.0', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v24.9.0',
@@ -56,6 +62,7 @@ versions:
   kube: ['1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 24.6.1
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.6.10', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v24.6.1',
@@ -64,6 +71,7 @@ versions:
   kube: ['1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 24.6.0
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.6.10', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v24.6.0',
@@ -72,6 +80,7 @@ versions:
   kube: ['1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 24.3.0
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.6.8', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v24.3.0',
@@ -80,6 +89,7 @@ versions:
   kube: ['1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 23.9.2
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.6.5', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v23.9.2',
@@ -88,14 +98,16 @@ versions:
   kube: ['1.29', '1.28', '1.27']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 23.9.1
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.6.2', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v23.9.1',
     'registry.k8s.io/nfd/node-feature-discovery:v0.14.2']
 - version: 23.9.0
-  kube: ['1.28', '1.27', '1.23']
+  kube: ['1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 23.9.0
   images: ['nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.6.2', 'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v23.9.0',
@@ -104,87 +116,101 @@ versions:
   kube: ['1.29', '1.28', '1.27']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 23.6.2
   images: ['nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v23.6.2',
     'registry.k8s.io/nfd/node-feature-discovery:v0.13.1']
 - version: 23.6.0
-  kube: ['1.28', '1.27', '1.23']
+  kube: ['1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 23.6.0
   images: ['nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.54.03',
     'nvcr.io/nvidia/cloud-native/kata-gpu-artifacts:ubuntu22.04-535.86.10-snp', 'nvcr.io/nvidia/gpu-operator:v23.6.0',
     'registry.k8s.io/nfd/node-feature-discovery:v0.13.1']
 - version: 23.3.1
-  kube: ['1.27', '1.26', '1.23']
+  kube: ['1.27', '1.26', '1.25']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 23.3.1
   images: ['nvcr.io/nvidia/gpu-operator:v23.3.1', 'registry.k8s.io/nfd/node-feature-discovery:v0.12.1']
 - version: 23.3.0
-  kube: ['1.26', '1.25', '1.23']
+  kube: ['1.26', '1.25', '1.24']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 23.3.0
   images: ['nvcr.io/nvidia/gpu-operator:v23.3.0', 'registry.k8s.io/nfd/node-feature-discovery:v0.12.1']
 - version: 22.9.1
-  kube: ['1.26', '1.25', '1.23']
+  kube: ['1.26', '1.25', '1.24']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 22.9.1
-  images: ['k8s.gcr.io/nfd/node-feature-discovery:v0.10.1', 'nvcr.io/nvidia/gpu-operator:v22.9.1']
+  images: []
 - version: 22.9.0
-  kube: ['1.26', '1.25', '1.24']
+  kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 22.9.0
-  images: ['k8s.gcr.io/nfd/node-feature-discovery:v0.10.1', 'nvcr.io/nvidia/gpu-operator:v22.9.0']
+  images: []
 - version: 1.11.0
-  kube: ['1.26', '1.25', '1.24']
+  kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.11.0
-  images: ['k8s.gcr.io/nfd/node-feature-discovery:v0.10.1', 'nvcr.io/nvidia/gpu-operator:v1.11.0']
+  images: []
 - version: 1.10.0
-  kube: ['1.26', '1.25', '1.24']
+  kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.10.0
-  images: ['k8s.gcr.io/nfd/node-feature-discovery:v0.10.1', 'nvcr.io/nvidia/gpu-operator:v1.10.0']
+  images: []
 - version: 1.9.0
-  kube: ['1.26', '1.25', '1.24']
+  kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.9.0
-  images: ['k8s.gcr.io/nfd/node-feature-discovery:v0.8.2', 'nvcr.io/nvidia/gpu-operator:v1.9.0']
+  images: []
 - version: 1.8.0
-  kube: ['1.26', '1.25', '1.24']
+  kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.8.0
-  images: ['k8s.gcr.io/nfd/node-feature-discovery:v0.8.2', 'nvcr.io/nvidia/gpu-operator:v1.8.0']
+  images: []
 - version: 1.7.0
-  kube: ['1.26', '1.25', '1.24']
+  kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.7.0
-  images: ['nvcr.io/nvidia/gpu-operator:v1.7.0', 'quay.io/kubernetes_incubator/node-feature-discovery:v0.6.0']
+  images: []
 - version: 1.6.0
-  kube: ['1.26', '1.25', '1.24']
+  kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.6.0
-  images: ['nvcr.io/nvidia/gpu-operator:1.6.0', 'quay.io/kubernetes_incubator/node-feature-discovery:v0.6.0']
+  images: []
 - version: 1.5.0
-  kube: ['1.26', '1.25', '1.24']
+  kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.5.0
-  images: ['nvcr.io/nvidia/gpu-operator:1.5.0', 'quay.io/kubernetes_incubator/node-feature-discovery:v0.6.0']
+  images: []
 - version: 1.4.0
-  kube: ['1.26', '1.25', '1.24']
+  kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
+  summary: null
   chart_version: 1.4.0
-  images: ['nvcr.io/nvidia/gpu-operator:1.4.0', 'quay.io/kubernetes_incubator/node-feature-discovery:v0.6.0']
+  images: []
