--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -1847,6 +1847,14 @@
   publisher: eks
 - name: aws-efs-csi-driver
   versions:
+  - version: v2.2.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v2.1.15-eksbuild.1
     compatibilities:
     - '1.34'
@@ -7311,6 +7319,13 @@
   publisher: Splunk
 - name: sriov-network-metrics-exporter
   versions:
+  - version: v1.2.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
   - version: v1.2.0-eksbuild.0
     compatibilities:
     - '1.34'
