--- a/charts/controller/crds/deployments.plural.sh_deploymentsettings.yaml
+++ b/charts/controller/crds/deployments.plural.sh_deploymentsettings.yaml
@@ -187,6 +187,33 @@ spec:
                     description: Bedrock holds configuration for using AWS Bedrock
                       to generate LLM insights
                     properties:
+                      awsAccessKeyId:
+                        description: AWS Access Key ID to use for authentication
+                        type: string
+                      awsSecretAccessKeyRef:
+                        description: AWS Secret Access Key to use for authentication
+                        properties:
+                          key:
+                            description: The key of the secret to select from.  Must
+                              be a valid secret key.
+                            type: string
+                          name:
+                            default: ""
+                            description: |-
+                              Name of the referent.
+                              This field is effectively required, but due to backwards compatibility is
+                              allowed to be empty. Instances of this type with an empty value here are
+                              almost certainly wrong.
+                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                            type: string
+                          optional:
+                            description: Specify whether the Secret or its key must
+                              be defined
+                            type: boolean
+                        required:
+                        - key
+                        type: object
+                        x-kubernetes-map-type: atomic
                       embeddingModel:
                         description: EmbeddingModel to use for generating embeddings
                         type: string
@@ -232,7 +259,6 @@ spec:
                     required:
                     - modelId
                     - region
-                    - tokenSecretRef
                     type: object
                   embeddingProvider:
                     description: |-
