--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -3759,6 +3759,16 @@
   publisher: eks
 - name: cribl_cribledge
   versions:
+  - version: v4.15.1-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
   - version: v4.15.0-eksbuild.1
     compatibilities:
     - '1.34'
