--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -4779,6 +4779,14 @@
   publisher: factorhouse
 - name: fluent-bit
   versions:
+  - version: v4.2.2-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v4.2.1-eksbuild.1
     compatibilities:
     - '1.34'
@@ -4822,6 +4830,14 @@
     - '1.30'
     - '1.29'
     - '1.28'
+  - version: v4.0.14-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v4.0.13-eksbuild.1
     compatibilities:
     - '1.34'
