--- a/charts/kas/templates/deployment.yaml
+++ b/charts/kas/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "kas.fullname" . }}
+  name: {{ include "kas.deploymentName" . }}
   labels:
     {{- include "kas.labels" . | nindent 4 }}
 spec:
