--- a/charts/kas/Chart.yaml
+++ b/charts/kas/Chart.yaml
@@ -6,5 +6,5 @@ appVersion: "0.2.0"
 dependencies:
   - name: redis
     version: 24.0.0
-    repository: https://charts.bitnami.com/bitnami
+    repository: file://../../chart-dependencies/redis
     condition: redis.enabled
