--- a/static/compatibilities.yaml
+++ b/static/compatibilities.yaml
@@ -13742,3 +13742,108 @@ addons:
     images: ['docker.io/bitnami/rabbitmq-cluster-operator:1.13.1-scratch-r3', 'docker.io/bitnami/rabbitmq:3.10.5-debian-11-r2',
       'docker.io/bitnami/rmq-default-credential-updater:1.0.2-scratch-r2', 'docker.io/bitnami/rmq-messaging-topology-operator:1.6.0-scratch-r0']
   name: rabbitmq-cluster-operator
+- icon: https://kserve.github.io/website/img/kserve-logo-small.png
+  git_url: https://github.com/kserve/kserve
+  release_url: https://github.com/kserve/kserve/releases/tag/v{vsn}
+  helm_repository_url: oci://ghcr.io/kserve/charts/kserve
+  chart_name: kserve
+  versions:
+  - version: 0.16.0
+    kube: ['1.35', '1.34', '1.33', '1.32']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: v0.16.0
+    images: ['docker.io/seldonio/mlserver:1.5.0', 'kserve/huggingfaceserver:v0.16.0',
+      'kserve/huggingfaceserver:v0.16.0-gpu', 'kserve/kserve-controller:v0.16.0',
+      'kserve/lgbserver:v0.16.0', 'kserve/paddleserver:v0.16.0', 'kserve/pmmlserver:v0.16.0',
+      'kserve/sklearnserver:v0.16.0', 'kserve/storage-initializer:v0.16.0', 'kserve/xgbserver:v0.16.0',
+      'nvcr.io/nvidia/tritonserver:23.05-py3', 'pytorch/torchserve-kfs:0.9.0', 'quay.io/brancz/kube-rbac-proxy:v0.18.0',
+      'tensorflow/serving:2.6.2']
+  - version: 0.15.2
+    kube: ['1.32', '1.31', '1.30']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: v0.15.2
+    images: ['docker.io/seldonio/mlserver:1.5.0', 'kserve/huggingfaceserver:v0.15.2',
+      'kserve/huggingfaceserver:v0.15.2-gpu', 'kserve/kserve-controller:v0.15.2',
+      'kserve/lgbserver:v0.15.2', 'kserve/paddleserver:v0.15.2', 'kserve/pmmlserver:v0.15.2',
+      'kserve/sklearnserver:v0.15.2', 'kserve/storage-initializer:v0.15.2', 'kserve/xgbserver:v0.15.2',
+      'nvcr.io/nvidia/tritonserver:23.05-py3', 'pytorch/torchserve-kfs:0.9.0', 'quay.io/brancz/kube-rbac-proxy:v0.18.0',
+      'tensorflow/serving:2.6.2']
+  - version: 0.14.1
+    kube: ['1.30', '1.29', '1.28']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: v0.14.1
+    images: ['docker.io/seldonio/mlserver:1.5.0', 'kserve/huggingfaceserver:v0.14.1',
+      'kserve/kserve-controller:v0.14.1', 'kserve/lgbserver:v0.14.1', 'kserve/modelmesh-controller:v0.12.0',
+      'kserve/paddleserver:v0.14.1', 'kserve/pmmlserver:v0.14.1', 'kserve/sklearnserver:v0.14.1',
+      'kserve/storage-initializer:v0.14.1', 'kserve/xgbserver:v0.14.1', 'nvcr.io/nvidia/tritonserver:23.04-py3',
+      'nvcr.io/nvidia/tritonserver:23.05-py3', 'openvino/model_server:2022.2', 'pytorch/torchserve-kfs:0.9.0',
+      'pytorch/torchserve:0.7.1-cpu', 'quay.io/brancz/kube-rbac-proxy:v0.18.0', 'seldonio/mlserver:1.3.2',
+      'tensorflow/serving:2.6.2']
+  - version: 0.13.1
+    kube: ['1.29', '1.28', '1.27']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: v0.13.1
+    images: ['docker.io/seldonio/mlserver:1.3.2', 'gcr.io/kubebuilder/kube-rbac-proxy:v0.13.1',
+      'kserve/huggingfaceserver:v0.13.1', 'kserve/kserve-controller:v0.13.1', 'kserve/lgbserver:v0.13.1',
+      'kserve/modelmesh-controller:v0.12.0-rc0', 'kserve/paddleserver:v0.13.1', 'kserve/pmmlserver:v0.13.1',
+      'kserve/sklearnserver:v0.13.1', 'kserve/storage-initializer:v0.13.1', 'kserve/xgbserver:v0.13.1',
+      'nvcr.io/nvidia/tritonserver:23.04-py3', 'nvcr.io/nvidia/tritonserver:23.05-py3',
+      'openvino/model_server:2022.2', 'pytorch/torchserve-kfs:0.9.0', 'pytorch/torchserve:0.7.1-cpu',
+      'seldonio/mlserver:1.3.2', 'tensorflow/serving:2.6.2']
+  - version: 0.12.1
+    kube: ['1.29', '1.28', '1.27']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: v0.12.1
+    images: ['docker.io/seldonio/mlserver:1.3.2', 'gcr.io/kubebuilder/kube-rbac-proxy:v0.13.1',
+      'kserve/huggingfaceserver:v0.12.1', 'kserve/kserve-controller:v0.12.1', 'kserve/lgbserver:v0.12.1',
+      'kserve/modelmesh-controller:v0.11.2', 'kserve/paddleserver:v0.12.1', 'kserve/pmmlserver:v0.12.1',
+      'kserve/sklearnserver:v0.12.1', 'kserve/storage-initializer:v0.12.1', 'kserve/xgbserver:v0.12.1',
+      'nvcr.io/nvidia/tritonserver:23.04-py3', 'nvcr.io/nvidia/tritonserver:23.05-py3',
+      'openvino/model_server:2022.2', 'pytorch/torchserve-kfs:0.9.0', 'pytorch/torchserve:0.7.1-cpu',
+      'seldonio/mlserver:1.3.2', 'tensorflow/serving:2.6.2']
+  - version: 0.11.2
+    kube: ['1.27', '1.26', '1.25']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: v0.11.2
+    images: []
+  - version: 0.10.2
+    kube: ['1.25', '1.24', '1.23', '1.22']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: v0.10.2
+    images: []
+  - version: 0.9.0
+    kube: ['1.24', '1.23', '1.22', '1.21']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: v0.9.0
+    images: []
+  - version: 0.8.0
+    kube: ['1.22', '1.21', '1.20']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: v0.8.0
+    images: []
+  - version: 0.7.0
+    kube: ['1.22', '1.21', '1.20', '1.19']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: v0.7.0
+    images: []
+  name: kserve
